# RingClosingMM

./: .gitignore  DEVEL_GUIDE.md  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  compute_energy_gradient.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: build_and_test_package.yml  publish_conda.yml
conda-recipe/: environment.yml  meta.yaml
data/: RCP_UFFvdW.xml
examples/: README.md  api_usage_example.py  run_all_examples.sh
examples/acyclic_bond_formation/: .gitignore  run.sh  test.int
examples/api_usage/: .gitignore  api_usage_example.py  run.sh
examples/cyclic_bond_formation/: .gitignore  run.sh  test.int  test2.sdf  test2_opt.int  tomin.int  tomin.xyz
examples/plot_energy_terms/: README.md  plot_energy_profiles_CA_CHC.py  plot_energy_profiles_CCCHA_CHCCC.py  plot_energy_profiles_CCHA_CHCC.py  plot_energy_profiles_two_atoms.py
examples/plot_ring_closure_score/: README.md  plot_ring_closure_score.py
examples/policyclic_bond_formation/: .gitignore  run.sh  test.int
examples/print_force_field/: mol-1.int
examples/server_usage/: .gitignore  client_example.py  mol.int  mol.xyz  request.json  response.json  run.sh  server_example.py
examples/simple_minimization/: .gitignore  run.sh
examples/strained_ring_closure/: .gitignore  c4.int  c4.xyz  c4_staggered.int  c5.int  complex.int  complex_result.int  distorted_complex.int  run.sh
misc/: README.md
misc/plot_custom_nonbonded/: components_both.xml  components_dist.xml  components_sigma.xml  original_CustomNonbondedForce_implementation.xml  plot_components.py  plot_smoothing.py
misc/plot_energy_terms/: README.md  plot_energy_profiles_CA_CHC.py  plot_energy_profiles_CCHA_CHCC.py  plot_energy_profiles_CCHCHA_CHCCCCH.py  plot_energy_profiles_two_atoms.py
misc/plot_ring_closure_score/: README.md  plot_ring_closure_score.py
misc/vdw_from_gaussian/: fit_gaussian_params.py  fit_gaussian_params_and_higher_order_sigma.py  fit_gaussian_params_and_higher_order_sigma_CC_CH_HH.py  plot_gauss_fit.py
ringclosingmm/: AnalyticalDistance.py  CoordinateConversion.py  CoordinateConverter.py  IOTools.py  MolecularSystem.py  RCOServer.py  RingClosingForceField.py  RingClosureOptimizer.py  ZMatrix.py  __init__.py  __main__.py
src/: CoordinateConverter.py  IOTools.py  MolecularSystem.py  RCOServer.py  RingClosingForceField.py  RingClosureOptimizer.py  ZMatrix.py  __init__.py  __main__.py
test/: run_all_tests.sh  test_analytical_distance.py  test_coordinate_conversion.py  test_iotools.py  test_molecular_system.py  test_ring_closing_force_field.py  test_ring_closure_optimizer.py  test_server.py  test_zmatrix.py
test/fixtures/: butane_like.int  mol2zmat.sdf  simple_molecule.int  simple_molecule.sdf  simple_molecule.xyz  simple_molecule_w_rcp_terms.int  water_like.int
